Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85969

QJsonDocument segfault in equality operator

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.1
    • 5.15.0
    • Core: Other
    • None
    • e790af0e0a030dea597bbc9489170b5ba1cf9e46 (qt/qtbase/dev) 801f719f12da68508a21ecebf1b37db6650beb8a (qt/qtbase/5.15)

      QJsonDocument::operator== does not check if 'other' is valid before accessing

      'other.d->value'.

       

      bool QJsonDocument::operator==(const QJsonDocument &other) const
      {
          return (!d) ? (!other.d) : (d->value == other.d->value);
      }

       

      Something like the following leads to a segfault.

      QJsonDocument validDoc = ... // a valid json document
      QJsonDocument invalidDoc{}; // an invalid json document
      if (validDoc == invalidDoc) { // segfault here
          ...
      }

       

        For Gerrit Dashboard: QTBUG-85969
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            ah ah
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes