QJsonDocument: fix comparison of valid vs default

[ChangeLog][QtCore][QJsonDocument] Fixed a bug that caused
QJsonDocument's equality operator to crash if one of the operands was
default-constructed and the other wasn't.

Fixes: QTBUG-85969
Change-Id: I5e00996d7f4b4a10bc98fffd1629f835f570ef6b
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
(cherry picked from commit e790af0e0a030dea597bbc9489170b5ba1cf9e46)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>